# music-search-bot

./: .dockerignore  .env  .env.ren  .gitignore  Dockerfile  LICENSE  Makefile  README.md  _get_database_url.py  app.py  docker-compose.yml  get_database_url.py  loader.py  main.py  postgresql-data  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: api.py
app/commands/: __init__.py  admin.py  default.py
app/filters/: admin.py
app/handlers/: __init__.py  cancel.py
app/handlers/admin/: __init__.py  get_db_file.py  get_logs_file.py
app/handlers/user/: __init__.py  help.py  library.py  search.py  start.py
app/handlers/users/: __init__.py  inline.py  library.py  search.py  song.py  start.py
app/keyboards/: __init__.py  back.py  inline.py  music.py  musics.py  names.py  song.py
app/middlewares/: __init__.py  inter.py  logging.py  user.py
app/states/: __init__.py  search.py
data/: config.py  database.sqlite
data/locales/: bot.pot
data/locales/en/LC_MESSAGES/: bot.mo  bot.po  messages.mo  messages.po
data/locales/ru/LC_MESSAGES/: bot.mo  bot.po  messages.mo  messages.po
data/locales/uk/LC_MESSAGES/: bot.mo  bot.po  messages.mo  messages.po
data/logs/: log.out
data/migrations/: 001_migrate.py  002_migrate.py
database/models/: __init__.py  base.py  music.py  song.py  user.py
database/services/: __init__.py  musics.py  users.py
migrations/: 001_migrate.py  002_migrate.py
utils/: __init__.py  api.py  logging.py  parse.py
utils/misc/: logging.py
