[tool.poetry]
name = "music-bot"
version = "0.1.0"
description = ""
authors = ["artem <artemilienkono@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
aiogram = "^2.21"
lxml = "^4.9.1"
beautifulsoup4 = "^4.11.1"
peewee = "^3.15.1"
peewee-migrate = "^1.4.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
